# repo-skills

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  tox.ini
.claude/workflows/: _extract-fn.mjs  grind-story.classify-loop-error.test.mjs  grind-story.group-iter.test.mjs  grind-story.group-pick.test.mjs  grind-story.js  grind-story.normalize-pick.test.mjs  grind-story.phase-cap.test.mjs  grind-story.repeat-guard.test.mjs
.github/workflows/: ci.yml  release.yml
.sandbox/: .env.example  README.md  docker-compose.yml  run.sh  worktree_work.sh
.sandbox/base/: tmux.conf  zshrc
.sandbox/scripts/: _lib.sh  attach.sh  build.sh  claude.sh  shell.sh
.tasker/: .gitignore
.tasker/s01-ideas/: README.md  s01t01-ignore-uncommitted-changes-when-they.md  s01t02-support-projectlevel-skills.md
.tasker/s02-rework-repo-workflow/: README.md  s02t05-skills-provider-addlistremove.md  s02t08-skills-update-reworked.md  s02t09-skills-uninstall-reworked.md  s02t11-rename-installed-skills-on-source.md
.tasker/s04-refactorings/: README.md  s04t01-create-skill-type-that-handles.md  s04t05-refactor-skillmanifest-out-of-configdeprecated.md  s04t06-wrap-clicktestingresult-behind-a-protocol.md  s04t07-support-lists-in-fmtdata-and.md  s04t08-evaluate-skillsetup-builder-roi-in.md  s04t09-rework-statuspy-internals-to-typed.md  s04t10-derive-source-name-from-register.md  s04t11-verify-and-test-python-3.md  s04t12-cli-code-quality-nits-per.md
sandbox/: docker-compose.yml
tasker/: s02-rework-repo-workflow.md  s03-rename-tool-to-reposkills-and.md  s06-usability.md
tests/: _node_gate.py  conftest.py  helper.py  test_cli.py  test_config.py  test_console.py  test_debug.py  test_discovery.py  test_git.py  test_git_real.py  test_install.py  test_list.py  test_main.py  test_node_gate.py  test_reporter.py  test_source_init.py  test_tox_js_gate.py  test_uninstall.py  test_update.py  test_workflow_js.py
(+529 files in other folders)
