[project]
name = "skill-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "pydantic>=2.0"]

[project.scripts]
skill = "skill_cli.main:cli"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pyfakefs>=6.2.0",
    "pytest",
    "pytest-subtests>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["skill_cli", "tests"]
mypy_path = "src:."

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
