[project]
name = "repo-skills"
version = "0.10.1"
description = "CLI tool for managing Claude Code skills from a shared repository."
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Evgeniy A. Cymbalyuk", email = "cimbaluk@gmail.com" }]
readme = "README.md"
dependencies = [
    "typer>=0.9.0",
    "typer-di>=0.1.5",
    "pydantic>=2.0",
    "rich>=13.0",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/greendwin/repo-skills"
Repository = "https://github.com/greendwin/repo-skills"

[project.scripts]
skills = "repo_skills.main:main"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pyfakefs>=6.2.0",
    "pytest",
    "pytest-subtests>=0.15.0",
    "tox",
    "tox-uv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
packages = ["repo_skills", "tests"]
mypy_path = "src:."

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
